generated-tests/tests/snapshots/ts/test_generated_object.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
{ prop11: value16, prop2: value21 }

AST:
(program
  (expression_statement
    (object
      (pair
        key: (property_identifier "prop11")
        value: (identifier "value16")
      )
      (pair
        key: (property_identifier "prop2")
        value: (identifier "value21")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "prop11",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 3,
                end_line: 1,
                end_column: 9,
            },
        },
        Usage {
            name: "value16",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 18,
            },
        },
        Usage {
            name: "prop2",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 20,
                end_line: 1,
                end_column: 25,
            },
        },
        Usage {
            name: "value21",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 27,
                end_line: 1,
                end_column: 34,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
