generated-tests/tests/snapshots/ts/test_generated_object1.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
{ prop13: value110, prop22: value210 }

AST:
(program
  (expression_statement
    (object
      (pair
        (property_identifier)
        (identifier value110)
      )
      (pair
        (property_identifier)
        (identifier value210)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "prop13",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 3,
            end_line: 1,
            end_column: 9,
        },
        SerializableUsage {
            name: "value110",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 11,
            end_line: 1,
            end_column: 19,
        },
        SerializableUsage {
            name: "prop22",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 21,
            end_line: 1,
            end_column: 27,
        },
        SerializableUsage {
            name: "value210",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 29,
            end_line: 1,
            end_column: 37,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
