generated-tests/tests/snapshots/ts/test_generated_object_pattern.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const { prop12, prop21 } = object;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (object_pattern
        (shorthand_property_identifier_pattern)
        (shorthand_property_identifier_pattern)
      )
      (identifier object)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "prop12",
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 15,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "prop21",
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 23,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "object",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 28,
                end_line: 1,
                end_column: 34,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
