generated-tests/tests/snapshots/ts/test_generated_object_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value17: { prop4: number } = { prop4: 42 };

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value17)
      (type_annotation
        (object_type
          (property_signature
            (property_identifier)
            (type_annotation
              (predefined_type)
            )
          )
        )
      )
      (object
        (pair
          (property_identifier)
          (number)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value17",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "prop4",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 23,
        },
        SerializableUsage {
            name: "prop4",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 38,
            end_line: 1,
            end_column: 43,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
