generated-tests/tests/snapshots/ts/test_generated_pair_pattern.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const { key1: value18 } = obj3;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (object_pattern
        (pair_pattern
          (property_identifier)
          (identifier value18)
        )
      )
      (identifier obj3)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value18",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "key1",
            kind: FieldExpression,
            scope: None,
            start_line: 1,
            start_column: 9,
            end_line: 1,
            end_column: 13,
        },
        SerializableUsage {
            name: "obj3",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 27,
            end_line: 1,
            end_column: 31,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
