generated-tests/tests/snapshots/ts/test_generated_parenthesized_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value20: (string | number) = 'test';

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value20)
      (type_annotation
        (parenthesized_type
          (union_type
            (predefined_type)
            (predefined_type)
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value20",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
